[package]
name = "fute-core"
version = "0.1.3"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
arrayvec = "0.7"
chid = {git = "ssh://git@github.com/JakeOShannessy/red-smoke.git", rev = "ff3791b00910dc06745a1e70f95c7d3fc7514d63"}
chrono = {version = "0.4", features = ["serde"] }
csv = "1"
data-vector = { git = "https://github.com/JakeOShannessy/data-vector.git"}
downcast-rs = "1"
fds-input-parser = {git = "ssh://git@github.com/JakeOShannessy/red-smoke.git", rev = "ff3791b00910dc06745a1e70f95c7d3fc7514d63"}
nom = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
version-compare = "0.1"
