[package]
name = "fute-rs"
version = "0.1.3"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12"
chid = {git = "ssh://git@github.com/JakeOShannessy/red-smoke.git", rev = "ec335ae1cfce97bd0c7b1346eec503f62d274b90"}
chrono = "0.4"
clap = {version = "3", features = ["cargo"]}
csv = "1"
data-vector = { git = "https://github.com/JakeOShannessy/data-vector.git"}
env_logger = "0.9"
fds-input-parser = {git = "ssh://git@github.com/JakeOShannessy/red-smoke.git", rev = "ec335ae1cfce97bd0c7b1346eec503f62d274b90"}
fute-core = { path = "../fute-core-rs" }
lazy_static = "1"
log = "0.4"
plotters = "0.3"
prettytable-rs = "0.8"
num-format = "0.4"
serde_json = "1"
url = "2"
walkdir = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi"] }
